--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@
                                     <div class="couple relative mb-4 z-10">
                                         <div class="p-1 rounded-lg shadow border border-indigo-300 bg-indigo-50 text-center w-full flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-125 hover:shadow-lg">
                                             <img src="family picture\Ella.jpg" alt="Grandchild 2.4 Photo" class="rounded-full mb-1 border border-indigo-400">
-                                            <p class="font-bold text-xs text-gray-800 truncate">Sophia Angela Trinidad</p>
+                                            <p class="font-bold text-xs text-gray-800 truncate">Sophia Angela</p>
+                                                 <p class="font-bold text-xs text-gray-800 truncate">Trinidad</p>
                                         </div>
                                     </div>
                                 </div>
@@ -539,7 +540,7 @@
                                         <div class="p-1 rounded-lg shadow border border-indigo-300 bg-indigo-50 text-center w-full flex flex-col items-center cursor-pointer transition-all duration-200 hover:scale-125 hover:shadow-lg">
                                             <img src="family picture\andrea.jpg" alt="Grandchild 3.2 Photo" class="rounded-full mb-1 border border-indigo-400">
                                             <p class="font-bold text-xs text-gray-800 truncate">Avanna Roe </p>
-                                            <p class="font-bold text-xs text-gray-800 truncate">Dela=Cruz </p>
+                                            <p class="font-bold text-xs text-gray-800 truncate">Dela-Cruz </p>
                                         </div>
                                     </div>
                                 </div>
@@ -676,6 +677,7 @@
     </div>
 </body>
 </html>
+
 
 
 
